--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:seed": "prisma db seed"
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -73,6 +73,6 @@
   },
   "prisma": {
     "schema": "src/shared/persistence/prisma/schema.prisma",
-    "seed": "ts-node src/shared/persistence/prisma/seed/track.seed.ts"
+    "seed": "ts-node src/shared/persistence/prisma/seed"
   }
 }
